pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: bb1
  labels:
    app: bb1
spec:
  containers:
    - name: bb1
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
    - name: my-nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: bb3
  labels:
    app: bb3
spec:
  containers:
    - name: bb3
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
