service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: LoadBalancer
